<resources>
    <string name="app_name">My Movie Application</string>
    <string name="movie_title">Movie Title</string>
    <string name="year">Year</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="directorName">Director Name</string>
    <string name="label_director">Director</string>


    <string-array name="data_overview">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth\'s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
    </string-array>

    <array name="data_poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_thegirl</item>
    </array>

    <string-array name="data_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Robin Hood</item>
        <item>The Girl in the Spider\'s Web</item>
    </string-array>

    <string-array name="data_release_date">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>November 27, 2018</item>
        <item>November 20, 2018</item>
        <item>October 25, 2018</item>
    </string-array>

    <string-array name="data_directorName">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Joe Russo, Anthony Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr.</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Rob Marshall</item>
        <item>Christian Rivers</item>
        <item>Otto Bathurst</item>
        <item>Fede Alvarez</item>
    </string-array>

    <string-array name="data_runtime">
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 9m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
    </string-array>
</resources>
